// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match a snapshot and render children with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-card-wrap"
      >
        <div
          class="el-card-context-menu-wrapper"
        >
          <div
            class="el-card-context-menu-toggle"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-context-menu-items"
          >
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
        <div
          class="el-card-main-wrap"
        >
          <div
            class="el-card-image-wrap"
          >
            <img
              src="https://via.placeholder.com/72x72.svg"
            />
          </div>
          <div
            class="el-card-heading-wrap"
          >
            <h5
              class="el-card-heading"
            >
              Main Heading
            </h5>
            <h6
              class="el-card-sub-heading"
            >
              Main Subheading
            </h6>
            <h6
              class="el-card-sub-heading-additional"
            >
              Main Subheading Additional
            </h6>
          </div>
        </div>
        <div
          class="el-mb5 el-card-body-wrap"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <div
          class="el-card-list-main-wrap"
        >
          <div
            class="el-card-context-menu-wrapper"
          >
            <div
              class="el-card-context-menu-toggle"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-context-menu-items"
            >
              <div
                class="el-card-context-menu-item"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-context-menu-item"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
              <div
                class="el-card-context-menu-item"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.25rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
          <h5
            class="el-card-list-heading"
          >
            List Card Heading
          </h5>
          <h6
            class="el-card-list-sub-heading"
          >
            List Card Sub Heading
          </h6>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Applicant
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Bob Smith
            </div>
          </div>
        </div>
        <div
          class="el-card-list-item"
        >
          <div
            class="el-card-list-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-list-item-text-wrap"
          >
            <div
              class="el-card-list-item-text-primary"
            >
              Property
            </div>
            <div
              class="el-card-list-item-text-secondary"
            >
              Some Address
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-card-wrap"
    >
      <div
        class="el-card-context-menu-wrapper"
      >
        <div
          class="el-card-context-menu-toggle"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-context-menu-items"
        >
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
        </div>
      </div>
      <div
        class="el-card-main-wrap"
      >
        <div
          class="el-card-image-wrap"
        >
          <img
            src="https://via.placeholder.com/72x72.svg"
          />
        </div>
        <div
          class="el-card-heading-wrap"
        >
          <h5
            class="el-card-heading"
          >
            Main Heading
          </h5>
          <h6
            class="el-card-sub-heading"
          >
            Main Subheading
          </h6>
          <h6
            class="el-card-sub-heading-additional"
          >
            Main Subheading Additional
          </h6>
        </div>
      </div>
      <div
        class="el-mb5 el-card-body-wrap"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
      </div>
      <div
        class="el-card-list-main-wrap"
      >
        <div
          class="el-card-context-menu-wrapper"
        >
          <div
            class="el-card-context-menu-toggle"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-context-menu-items"
          >
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-card-context-menu-item"
            >
              <span
                class="el-icon"
                style="font-size: 1.25rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
        <h5
          class="el-card-list-heading"
        >
          List Card Heading
        </h5>
        <h6
          class="el-card-list-sub-heading"
        >
          List Card Sub Heading
        </h6>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Applicant
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Bob Smith
          </div>
        </div>
      </div>
      <div
        class="el-card-list-item"
      >
        <div
          class="el-card-list-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-list-item-text-wrap"
        >
          <div
            class="el-card-list-item-text-primary"
          >
            Property
          </div>
          <div
            class="el-card-list-item-text-secondary"
          >
            Some Address
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Card should match a snapshot and render children with no props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-card-wrap"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-card-wrap"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardContextMenu should match a snapshot and render children with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-card-context-menu-wrapper"
      >
        <div
          class="el-card-context-menu-toggle"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-context-menu-items"
        >
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-card-context-menu-item"
          >
            <span
              class="el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-card-context-menu-wrapper"
    >
      <div
        class="el-card-context-menu-toggle"
      >
        <span
          class="el-icon"
          style="font-size: 1.25rem;"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-card-context-menu-items"
      >
        <div
          class="el-card-context-menu-item"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-context-menu-item"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-card-context-menu-item"
        >
          <span
            class="el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CardContextMenu should match a snapshot and render children with no props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
